@@ -3,6 +3,7 @@ package ru.yandex.practicum.filmorate.dal.mappers.film;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Component;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.MpaName;
@@ -13,58 +14,81 @@ import java.sql.Timestamp;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 public class FilmRowMapper implements RowMapper<Film> {
 
     @Override
-    public Film mapRow(ResultSet resultSet, int rowNum) throws SQLException {
+    public Film mapRow(ResultSet rs, int rowNum) throws SQLException {
         Film film = new Film();
-        film.setId(resultSet.getLong("id"));
-        film.setName(resultSet.getString("name"));
-        film.setDescription(resultSet.getString("description"));
-        film.setDuration(resultSet.getInt("duration"));
-        if (resultSet.getString("mpa_name") != null) {
-            log.info(resultSet.getString("mpa_name"));
+        film.setId(rs.getLong("id"));
+        film.setName(rs.getString("name"));
+        film.setDescription(rs.getString("description"));
+        film.setDuration(rs.getInt("duration"));
+
+        // MPA
+        if (rs.getString("mpa_name") != null) {
             MpaName mpa = new MpaName();
-            mpa.setId(resultSet.getInt("mpa_id"));
-            mpa.setName(resultSet.getString("mpa_name"));
+            mpa.setId(rs.getInt("mpa_id"));
+            mpa.setName(rs.getString("mpa_name"));
             film.setMpa(mpa);
         }
 
-        if (resultSet.getString("genres_data") != null) {
-            film.setGenres(parseGenres(resultSet.getString("genres_data")));
+        // Genres
+        if (rs.getString("genres_data") != null) {
+            film.setGenres(parseGenres(rs.getString("genres_data")));
         }
 
-        if (resultSet.getString("film_likes") != null) {
-            java.sql.Array sqlArrayUsers = resultSet.getArray("film_likes");
-            if (sqlArrayUsers != null) {
-                Object[] data = (Object[]) sqlArrayUsers.getArray();
-                Long[] users = Arrays.stream(data)
-                        .map(obj -> ((Number) obj).longValue())
-                        .toArray(Long[]::new);
-                film.addLikes(Arrays.stream(users).toList());
-            }
+        // Likes (STRING_AGG вернул строку "1,2,3")
+        if (rs.getString("film_likes") != null && !rs.getString("film_likes").isBlank()) {
+            List<Long> likes = Arrays.stream(rs.getString("film_likes").split(","))
+                    .filter(s -> !s.isEmpty())
+                    .map(Long::parseLong)
+                    .collect(Collectors.toList());
+            film.addLikes(likes);
         }
 
-        Timestamp releaseDate = resultSet.getTimestamp("release_date");
-        film.setReleaseDate(releaseDate.toLocalDateTime().toLocalDate());
+        // Directors
+        if (rs.getString("directors_data") != null) {
+            film.setDirectors(parseDirectors(rs.getString("directors_data")));
+        }
+
+        // Release date
+        Timestamp releaseDate = rs.getTimestamp("release_date");
+        if (releaseDate != null) {
+            film.setReleaseDate(releaseDate.toLocalDateTime().toLocalDate());
+        }
+
         return film;
     }
 
     private List<Genre> parseGenres(String genresData) {
-        if (genresData == null || genresData.isBlank()) {
-            return Collections.emptyList();
-        }
+        if (genresData == null || genresData.isBlank()) return Collections.emptyList();
 
         return Arrays.stream(genresData.split(","))
                 .map(genreInfo -> {
-                    String[] genreArr = genreInfo.split(":");
-                    return new Genre(
-                            Integer.parseInt(genreArr[0]),
-                            genreArr[1]
-                    );
-                }).toList();
+                    String[] parts = genreInfo.split(":");
+                    int id = Integer.parseInt(parts[0].trim());
+                    String name = parts.length > 1 ? parts[1].trim() : null;
+                    return new Genre(id, name);
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<Director> parseDirectors(String directorsData) {
+        if (directorsData == null || directorsData.isBlank()) return Collections.emptyList();
+
+        return Arrays.stream(directorsData.split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(directorInfo -> {
+                    String[] parts = directorInfo.split(":");
+                    long id = Long.parseLong(parts[0].trim());
+                    String name = parts.length > 1 ? parts[1].trim() : null;
+                    return new Director(id, name);
+                })
+                .collect(Collectors.toList());
     }
 }
